[tool.poetry]
name = "py-study"
version = "0.1.0"
description = ""
authors = ["FaizalFeng <fzx401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
matplotlib = "*"
scrapy = "*"
fastapi = "*"
playwright = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
