[tool.poetry]
name = "pystudy"
version = "0.1.0"
description = ""
authors = ["FaizalFeng <fzx401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
matplotlib = "*"
scrapy = "*"
fastapi = "*"
playwright = "*"
scipy = "*"
openpyxl = "*"
ipykernel = "^6.29.3"
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
loguru = "^0.7.2"
uvicorn = "^0.30.1"
fastapi-cli = "^0.0.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
